--- a/src/views/admin/preview-dashboard.ejs
+++ b/src/views/admin/preview-dashboard.ejs
@@ -6,6 +6,7 @@
     <title>Admin Dashboard Preview - Novi</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="/css/admin-dashboard.css" rel="stylesheet">
+    <link rel="icon" href="/logo-icon copy.svg">
 </head>
 <body data-admin-id="<%= admin.id %>">
     <!-- Header -->
@@ -435,6 +436,7 @@
       </div>
     </div>
 
+    <script src="/js/theme-utils.js"></script>
     <script src="/js/admin-dashboard.js"></script>
 </body>
 </html> 
