--- a/src/views/admin/preview-dashboard.ejs
+++ b/src/views/admin/preview-dashboard.ejs
@@ -31,6 +31,7 @@
                     <span class="notification-badge">3</span>
                 </button>
                 <button class="icon-btn" id="themeToggle">
+                    <i class="fas fa-sun"></i>
                     <i class="fas fa-moon"></i>
                 </button>
                 <div class="dropdown">
