--- a/src/views/preview-landing.ejs
+++ b/src/views/preview-landing.ejs
@@ -933,6 +933,8 @@
                 <a href="#pricing" class="nav-link">Pricing</a>
                 <a href="#contact" class="nav-link">Contact</a>
                 <button class="theme-toggle" id="themeToggle">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
                     <i class="fas fa-moon"></i>
                 </button>
                 <a href="/login" class="btn btn-outline">Business Login</a>
