--- a/src/views/admin/businesses.ejs
+++ b/src/views/admin/businesses.ejs
@@ -23,7 +23,11 @@
                 <a href="/admin/orders" class="nav-link">Orders</a>
                 <a href="/admin/users" class="nav-link">Users</a>
                 <button class="btn btn-icon" id="theme-toggle" aria-label="Toggle Theme">
-                    <i class="fas fa-sun"></i><i class="fas fa-moon" style="display: none;"></i>
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                    <i class="fas fa-moon"></i>
                 </button>
                 <div class="dropdown">
                     <button class="btn btn-icon" id="profileDropdown"><i class="fas fa-user"></i></button>
