--- a/src/views/admin/edit-order.ejs
+++ b/src/views/admin/edit-order.ejs
@@ -22,6 +22,8 @@
             </div>
             <div class="header-actions">
                 <button class="icon-btn" id="themeToggle" title="Toggle theme">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
                     <i class="fas fa-moon"></i>
                 </button>
                 <div class="dropdown">
