--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -359,6 +359,8 @@
                 <a href="/login" class="nav-link">Business Login</a>
                 <a href="/admin/dashboard" class="nav-link">Admin</a>
                 <button class="theme-toggle" id="themeToggle">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
                     <i class="fas fa-moon"></i>
                 </button>
             </nav>
