--- a/src/views/orders.ejs
+++ b/src/views/orders.ejs
@@ -32,8 +32,8 @@
 
                 <button class="btn btn-icon" id="theme-toggle" aria-label="Toggle Theme">
                     <i class="fas fa-sun"></i>
-                    <i class="fas fa-moon" style="display: none;"></i>
-            </button>
+                    <i class="fas fa-moon"></i>
+                </button>
                 <div class="dropdown">
                     <button class="btn btn-icon" id="profileDropdown">
                         <i class="fas fa-user"></i>
