--- a/src/views/setup-business.ejs
+++ b/src/views/setup-business.ejs
@@ -304,7 +304,7 @@
                 <div class="logo-icon">
                     <!-- Removed WhatsApp icon -->
         </div>
-                <div class="logo-text"><img id="theme-logo" src="/logo-animated.svg" alt="Novi Logo" style="height:56px;vertical-align:middle;"></div>
+                <div class="logo-text"><img class="theme-logo" src="/logo-animated.svg" alt="Novi Logo" style="height:56px;vertical-align:middle;"></div>
             </div>
             <nav class="nav">
                 <a href="/" class="nav-link">Home</a>
@@ -312,7 +312,6 @@
                 <a href="/admin/dashboard" class="nav-link">Admin</a>
                 <button class="theme-toggle" id="themeToggle">
                     <i class="fas fa-sun"></i>
-                    <i class="fas fa-moon"></i>
                     <i class="fas fa-moon"></i>
                 </button>
             </nav>
