--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -451,7 +451,7 @@
                 <div class="logo-icon">
                     <!-- Removed WhatsApp icon -->
                 </div>
-                <div class="logo-text"><img id="theme-logo" src="/logo-animated.svg" alt="Novi Logo" style="height:56px;vertical-align:middle;"></div>
+                <div class="logo-text"><img class="theme-logo" src="/logo-animated.svg" alt="Novi Logo" style="height:56px;vertical-align:middle;"></div>
             </div>
             <nav class="nav">
                 <a href="/" class="nav-link">Home</a>
